--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -9,7 +9,7 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen 80;
+        listen LISTEN_PORT default_server;
         server_name _;
         root /app/public;
         index index.php;
